--- a/charts/risingwave/values.yaml
+++ b/charts/risingwave/values.yaml
@@ -495,6 +495,11 @@ stateStore:
     ##
     bucket: ""
 
+    ## @param stateStore.s3.isForcePathStyle S3 path format. 
+    ## env 'RW_IS_FORCE_PATH_STYLE' is used
+    ##
+    isForcePathStyle: false
+    
     authentication:
       ## @param stateStore.s3.authentication.useServiceAccount Use S3 service account authentication.
       ## If enabled, accessKey and secretAccessKey will be ignored.
