--- a/charts/risingwave/templates/meta-sts.yaml
+++ b/charts/risingwave/templates/meta-sts.yaml
@@ -186,7 +186,7 @@ spec:
         - name: AWS_REGION
           value: {{ .Values.stateStore.s3.region }}
         {{- end }}
-        {{- if and .Values.stateStore.s3.enabled .Values.stateStore.s3.isForcePathStyle }} 
+        {{- if and .Values.stateStore.s3.enabled .Values.stateStore.s3.forcePathStyle }} 
         - name: RW_IS_FORCE_PATH_STYLE
           value: 'true'
         {{- end }}        
