--- a/charts/risingwave/tests/statestore/standalone-sts_env_test.yaml
+++ b/charts/risingwave/tests/statestore/standalone-sts_env_test.yaml
@@ -42,7 +42,7 @@ tests:
       path: spec.template.spec.containers[0].env
       content:
         name: RW_IS_FORCE_PATH_STYLE
-      any: true      
+      any: "true"
   - notContains:
       path: spec.template.spec.containers[0].envFrom
       content:
